Implementing the movement -- semi-finished

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>16</maven.compiler.release>
-    <exec.mainClass>boardgame.Main</exec.mainClass>
+    <exec.mainClass>myGame.Main</exec.mainClass>
     <javafx.version>16</javafx.version>
     <tinylog.version>2.3.1</tinylog.version>
 </properties>
